# emcee

./: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  404.html  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.markdown  README.md  README.rst  VISION.md  bootstrap.min.css  breaking_test.py  codecov.yml  demo.py  environment.yml  gen_api.py  gen_example.py  index.html  itertest.py  mahdiparsa  mypy.ini  objects.inv  pyproject.toml  quickstart.py  readthedocs.yml  requirements-dev.txt  requirements.txt  (+5 more)
.ci/: travis.sh
.github/: ISSUE_TEMPLATE.md
1.0/: __init__.html  ensemble.html  sampler.html
1.0.0/: __init__.html  ensemble.html  sampler.html  tests.html
1.2.0/: index.html  objects.inv  searchindex.js
2.0.0/: index.html  objects.inv
2.1.0/: index.html  objects.inv  searchindex.js
2.2.0/: .buildinfo  index.html  objects.inv  searchindex.js
2.2.1/: .buildinfo  index.html  objects.inv  searchindex.js
3.0.0/: index.html  objects.inv  searchindex.js
_modules/: index.html
_sources/: api.txt  index.txt  testimonials.txt
_static/: flasky.css
acor/: Makefile  README.md  __init__.py  _acor.c  acc.cpp  acc_dfm.cpp  acor.c  acor.cpp  acor.h  acor.i  acor.py  setup.py
api/: index.html
assets/: bootstrap-responsive.css  bootstrap.min.css  code.css
binder/: environment.yml  requirements.txt
current/: index.html  objects.inv  searchindex.js
dev/: index.html  objects.inv  searchindex.js
docs/: .gitignore  Makefile  api.rst  conf.py  ensemble.html  fix_internal_links.py  gen_api.py  index.html  index.rst  mh.html  pt.rst  requirements.txt  sampler.html  testimonials.rst  tests.html  tutorials.rst
document/: .gitignore  Makefile  aastex.cls  doc.tex  gauss_scaling.h5  ms.tex  numberparagraphs.sty  pyest.tex
emcee/: __init__.py  adaptiveptsampler.py  autocorr.py  compat.py  desampler.py  desampler_no_snooker.py  dnest.py  ensemble.py  interruptible_pool.py  mh.py  model.py  mpi_pool.py  pbar.py  ptsampler.py  sampler.py  schedule.py  state.py  test_demc.py  tests.py  utils.py  walker.py
emcee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: .gitignore  blobs.py  dnest-slab.py  dnest.py  double_gaus_demc.py  eggbox.py  fitting_line.py  harlemcmc.py  ipython_parallel.py  line.py  loadbalance.py  mpi.py  mpi_example.py  mpi_pool.py  multimodal.py  outliers.data  pt_sampling.py  pt_thermodynamic_integration.py  quickstart.py  rosenbrock.py  rosenbrock_demc.py  simple.py  subprocessing.py  test_demc.py
genindex/: index.html
joss/: .gitignore  (+5 more)
(+350 files in other folders)
