[build-system]
requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py35']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["h5py", "matplotlib", "numpy", "pkg_resources", "pytest", "setuptools"]

[tool.coverage.run]
parallel = true
branch = true
source = ["emcee"]
omit = [
    "emcee/interruptible_pool.py",
    "emcee/mpi_pool.py",
    "emcee/ptsampler.py",
    "docs/*",
    "tests/*",
    "*__init__*"
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError",
    "def __len__",
    "def __repr__",
    "logging.warning",
    "deprecation_warning",
    "deprecated",
    "if tqdm is None"
]
